2009-11-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/grantpt.c (grantpt): Use CLOSE_ALL_FDS is available
	before the exec.
	* sysdeps/unix/sysv/linux/grantpt.c: New file.
	* login/programs/pt_chown.c (main): Don't print message on errors
	when doing real work.

	* sysdeps/unix/grantpt.c (grantpt): Only get tty group information
	once.

	* csu/elf-init.c (__libc_csu_irel): New function.  Code to perform
	irel relocations split out from...
	(__libc_csu_init): ...here.
	* csu/libc-start.c [!SHARED]: Call __libc_csu_irel early.

2009-11-23  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/stat.h: Use struct timespec
	for timestamps also if __USE_XOPEN2K8.
	* sysdeps/unix/sysv/linux/sparc/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/stat.h: Likewise.

2009-11-22  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (restart): Try harder to re-exec.

	* sunrpc/create_xid.c (_create_xid): Reinitialize state after fork.

	* sysdeps/unix/sysv/linux/ntp_gettimex.c:  New file.
	* sysdeps/unix/sysv/linux/Makefile: Add rules to build ntp_gettimex.
	* sysdeps/unix/sysv/linux/Versions: Export ntp_gettimex for GLIBC_2.12.
	* sysdeps/unix/sysv/linux/sys/timex.h (ntptimeval): Add tai member and
	some placeholders.  Redirect ntp_gettime to ntp_gettimex.
	* sysdeps/unix/sysv/linux/ntp_gettime.c: Adjust for header change.

	* sysdeps/unix/sysv/linux/sys/timex.h (MOD_TAI, MOD_MICRO, MOD_NANO):
	Define.
	(STA_RONLY): Add STA_NANO, STA_MODE, and STA_CLK.

2009-11-18  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #10162]
	* sysdeps/ia64/memchr.S: Don't use a simple loop on data shorter
	than software pipeline.  Properly recover from shorter read.

2009-11-19  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10958]
	* libio/libio.h (_IO_getwc_unlocked): Check for _wide_data being
	initialized before using it.